--- a/.eslintrc
+++ b/.eslintrc
@@ -9,11 +9,18 @@
     "no-use-before-define":  [0],
     "no-loop-func":          [0],
     "key-spacing":           [0],
-    "max-len":               [2],
+    "max-len":               [0],
     "strict":                [0],
     "indent":                [0],
     "quotes":                [2, "single", "avoid-escape"],
     "curly":                 [0]
+  },
+  "ecmaFeatures": {
+    "blockBindings": true,
+    "modules": true,
+    "destructuring": true,
+    "arrowFunctions": true,
+    "templateStrings": true
   },
   "env": {
     "mocha": true,
