TypeScript, PostCSS 5.x, fix all reported issues

--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,21 @@
-.gitignore
-
-node_modules/
-
+.*
+!.d.ts
+*.sln*
+*.suo
+build/
+coverage/
 lib/
 test/
-.travis.yml
-
+!dist/lib
+!dist/d.ts/lib
+scripts/
+typings/chai/
+typings/mocha/
+typings/sinon/
+typings/sinon-chai/
+appveyor.yml
 gulpfile.babel.js
+jsconfig.json
+tsconfig.json
+tsd.json
+tslint.json
