--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "postcss-property-lookup",
   "version": "0.2.2",
   "description": "PostCSS plugin that allows referencing property values without a variable",
+  "main": "dist/lib/plugin.js",
+  "scripts": {
+    "prepublish": "gulp && gulp copy && npm run babelify",
+    "babelify": "babel build/lib --out-dir dist/lib",
+    "test": "gulp && npm run cover && npm run check-coverage",
+    "cover": "isparta cover node_modules/mocha/bin/_mocha -i build/lib/plugin.js",
+    "check-coverage": "istanbul check-coverage",
+    "watch": "sh scripts/watch"
+  },
   "keywords": [
     "postcss",
     "css",
@@ -14,19 +23,25 @@
     "type": "git",
     "url": "https://github.com/simonsmith/postcss-property-lookup.git"
   },
-  "main": "build/index.js",
   "dependencies": {
-    "postcss": "^4.1.13"
+    "postcss": "^5.0.4"
   },
   "devDependencies": {
-    "babel": "^5.6.14",
-    "chai": "^3.0.0",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.23",
+    "babel-eslint": "^4.1.1",
+    "chai": "^3.2.0",
+    "del": "^2.0.1",
+    "eslint": "^1.3.1",
+    "event-stream": "^3.3.1",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.1.0",
-    "gulp-eslint": "^0.15.0",
-    "gulp-mocha": "^2.1.2"
-  },
-  "scripts": {
-    "test": "gulp"
+    "gulp-eslint": "^1.0.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-plumber": "^1.0.1",
+    "gulp-tslint": "^3.2.0",
+    "gulp-typescript": "^2.8.2",
+    "isparta": "3.0.3",
+    "istanbul": "^0.3.19",
+    "mocha": "^2.3.0"
   }
 }
