--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,136 @@
 {
-  "rules": {
-    "no-unused-expressions": [0],
-    "no-underscore-dangle":  [0],
-    "no-reserved-keys":      [2],
-    "no-multi-spaces":       [0],
-    "no-extra-parens":       [2],
-    "no-unused-vars":        [2],
-    "no-use-before-define":  [0],
-    "no-loop-func":          [0],
-    "key-spacing":           [0],
-    "max-len":               [0],
-    "strict":                [0],
-    "indent":                [0],
-    "quotes":                [2, "single", "avoid-escape"],
-    "curly":                 [0]
-  },
-  "ecmaFeatures": {
-    "blockBindings": true,
-    "modules": true,
-    "destructuring": true,
-    "arrowFunctions": true,
-    "templateStrings": true
-  },
-  "env": {
-    "mocha": true,
-    "node":  true
-  }
+	"parser": "babel-eslint",
+	"env": {
+		"node": true
+	},
+	"rules": {
+		"comma-dangle": [2, "never"],
+		"no-cond-assign": 2,
+		"no-constant-condition": 2,
+		"no-control-regex": 2,
+		"no-debugger": 2,
+		"no-dupe-args": 2,
+		"no-dupe-keys": 2,
+		"no-duplicate-case": 2,
+		"no-empty": 2,
+		"no-empty-character-class": 2,
+		"no-ex-assign": 2,
+		"no-extra-boolean-cast": 2,
+		"no-extra-parens": 2,
+		"no-extra-semi": 2,
+		"no-func-assign": 2,
+		"no-inner-declarations": 2,
+		"no-invalid-regexp": 2,
+		"no-irregular-whitespace": 2,
+		"no-negated-in-lhs": 2,
+		"no-obj-calls": 2,
+		"no-regex-spaces": 2,
+		"no-sparse-arrays": 2,
+		"no-unexpected-multiline": 2,
+		"no-unreachable": 2,
+		"quote-props": [2, "as-needed"],
+		"use-isnan": 2,
+		"valid-typeof": 2,
+
+		"block-scoped-var": 2,
+		"consistent-return": 2,
+		"curly": 2,
+		"dot-notation": 2,
+		"eqeqeq": 2,
+		"guard-for-in": 2,
+		"no-alert": 2,
+		"no-caller": 2,
+		"no-div-regex": 2,
+		"no-else-return": 2,
+		"no-eval": 2,
+		"no-extend-native": 2,
+		"no-extra-bind": 2,
+		"no-floating-decimal": 2,
+		"no-implied-eval": 2,
+		"no-iterator": 2,
+		"no-labels": 2,
+		"no-lone-blocks": 2,
+		"no-loop-func": 2,
+		"no-multi-spaces": 2,
+		"no-multi-str": 2,
+		"no-native-reassign": 2,
+		"no-new-func": 2,
+		"no-new-wrappers": 2,
+		"no-new": 2,
+		"no-octal-escape": 2,
+		"no-octal": 2,
+		"no-param-reassign": 2,
+		"no-proto": 2,
+		"no-redeclare": 2,
+		"no-return-assign": 2,
+		"no-script-url": 2,
+		"no-self-compare": 2,
+		"no-sequences": 2,
+		"no-throw-literal": 2,
+		"no-unused-expressions": 2,
+		"no-with": 2,
+		"radix": 2,
+		"wrap-iife": 2,
+		"yoda": 2,
+
+		"strict": [2, "never"],
+
+		"no-delete-var": 2,
+		"no-shadow-restricted-names": 2,
+		"no-shadow": 2,
+		"no-undef-init": 2,
+		"no-undef": 2,
+		"no-undefined": 2,
+		"no-unused-vars": 2,
+		"no-use-before-define": 0,
+
+		"array-bracket-spacing": [2, "never"],
+		"brace-style": [2, "stroustrup"],
+		"camelcase": 2,
+		"comma-spacing": 2,
+		"eol-last": 2,
+		"func-style": [2, "declaration"],
+		"indent": [2, "tab", {
+			"SwitchCase": 1
+		}],
+		"key-spacing": 2,
+		"linebreak-style": 2,
+		"new-cap": 2,
+		"new-parens": 2,
+		"no-array-constructor": 2,
+		"no-inline-comments": 2,
+		"no-lonely-if": 2,
+		"no-mixed-spaces-and-tabs": 2,
+		"no-multiple-empty-lines": 2,
+		"no-nested-ternary": 2,
+		"no-new-object": 2,
+		"no-spaced-func": 2,
+		"no-trailing-spaces": 2,
+		"no-underscore-dangle": 2,
+		"no-unneeded-ternary": 2,
+		"object-curly-spacing": [2, "always", {
+			"objectsInObjects": false,
+			"arraysInObjects": false
+		}],
+		"one-var": [2, "never"],
+		"operator-assignment": 2,
+		"padded-blocks": [2, "never"],
+		"quote-props": [2, "as-needed"],
+		"quotes": [2, "single"],
+		"semi-spacing": 2,
+		"semi": 2,
+		"space-after-keywords": 2,
+		"space-before-blocks": 2,
+		"space-before-function-paren": [2, "never"],
+		"space-in-parens": 2,
+		"space-infix-ops": 2,
+		"space-return-throw-case": 2,
+		"space-unary-ops": 2,
+
+		"constructor-super": 2,
+		"no-this-before-super": 2,
+		"no-var": 2,
+		"object-shorthand": 2,
+		"prefer-const": 2
+	}
 }
