Add correct build task to package.json

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "scripts": {
     "test": "gulp",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "build": "gulp build"
   }
 }
