--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-property-lookup",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "PostCSS plugin that allows referencing property values without a variable",
   "keywords": [
     "postcss",
@@ -16,7 +16,9 @@
   },
   "main": "build/index.js",
   "dependencies": {
-    "postcss": "^5.0.4"
+    "object-assign": "^4.0.1",
+    "postcss": "^5.0.4",
+    "tcomb": "^2.5.1"
   },
   "devDependencies": {
     "babel": "^5.6.14",
