--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "tcomb": "^2.5.1"
   },
   "devDependencies": {
-    "babel": "^5.6.14",
+    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.0.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.1.0",
-    "gulp-eslint": "^0.15.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-eslint": "^1.1.1",
     "gulp-mocha": "^2.1.2"
   },
   "scripts": {
