--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tcomb": "^2.5.1"
   },
   "devDependencies": {
+    "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.0.0",
     "gulp": "^3.9.0",
