--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,20 @@
 {
+  "extends": "airbnb-base",
   "rules": {
-    "no-unused-expressions": [0],
-    "no-underscore-dangle":  [0],
-    "no-multi-spaces":       [0],
-    "no-extra-parens":       [2],
-    "no-unused-vars":        [2],
-    "no-use-before-define":  [0],
-    "no-loop-func":          [0],
-    "key-spacing":           [0],
-    "max-len":               [0],
-    "strict":                [0],
-    "indent":                [0],
-    "quotes":                [2, "single", "avoid-escape"],
-    "curly":                 [0]
-  },
-  "ecmaFeatures": {
-    "blockBindings": true,
-    "modules": true,
-    "objectLiteralShorthandMethods": true,
-    "destructuring": true,
-    "arrowFunctions": true,
-    "templateStrings": true
+    "block-spacing": ["error", "never"],
+    "comma-dangle": ["error", "always-multiline"],
+    "func-names": 0,
+    "arrow-body-style": 0,
+    "no-cond-assign": [2, "except-parens"],
+    "no-param-reassign": [0],
+    "no-use-before-define": [2, "nofunc"],
+    "object-curly-spacing": ["error", "never"],
+    "one-var": [2, { "uninitialized": "always", "initialized": "never" }],
+    "space-before-function-paren": [2, "never"],
+    "vars-on-top": 0
   },
   "env": {
-    "node":  true
+    "jest": true,
+    "node": true
   }
 }
