--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.7.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
-    "gulp-eslint": "^1.1.1",
     "gulp-mocha": "^2.1.2"
   },
   "scripts": {
+    "lint": "eslint lib/index.js test/test.js",
     "test": "gulp",
     "prepublish": "npm run build",
     "build": "gulp build"
